2007-07-01  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-list-popmenu.cc:
	* src/gnome-cmd-main-menu.cc:
	* src/gnome-cmd-user-actions.cc:
	* src/gnome-cmd-user-actions.h:
	* src/utils.h:
	Added "Open Terminal" action to toolbar, RMB and user actions.

2007-06-30  Piotr Eljasiak  <epiotr@use.pl>

	* configure.in:
	* src/Makefile.am:
	* src/main.cc:
	Set proper value to DATADIR

2007-06-28  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	* src/gnome-cmd-file.cc:
	Fixed runtime assertions

2007-06-28  Kamil Madac

	* src/gnome-cmd-xfer-progress-win.c:
	Show copied bytes instead of percentage during file transfer

2007-06-26  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-dir.cc:
	* src/gnome-cmd-dir.h:
	Fixed crash when creating absolute dir on SMB share

2007-06-26  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Replacing obsoleted gnome_pixmap_*() with gdk_pixbuf_*()

2007-06-22  Piotr Eljasiak  <epiotr@use.pl>

	* src/utils.cc:
	Fixed bug #447415 (gcmd can't launch executables)

2007-06-16  koos  <kjniesink@yahoo.co.uk>

	* src/gnome-cmd-mkdir-dialog.cc:
	Fixed problem when creating ~/dir

2007-06-16  Piotr Eljasiak  <epiotr@use.pl>

	* src/gnome-cmd-file.cc:
	* src/gnome-cmd-file.h:
	* src/tags/gnome-cmd-tags.cc:
	* src/tags/gnome-cmd-tags.h:
	Initial framework for new metatags implementation
	(replacing GHashTable with std::map<GnomeCmdTag,std::string>)

2007-06-12  Piotr Eljasiak  <epiotr@use.pl>

	* data/gnome-commander.spec.in:
	Minor tweaking with library versioning

2007-06-12  Damien Carbery  <damien.carbery@sun.com>

	* configure.in:
	* libgcmd/gnome-cmd-file-info.c:
	* libgcmd/Makefile.am:
	* plugins/cvs/Makefile.am:
	* plugins/fileroller/Makefile.am:
	* plugins/test/Makefile.am:
	* plugins/test/test-plugin.c:
	* src/dict.h:
	* src/filter.cc:
	* src/gnome-cmd-data.cc:
	* src/gnome-cmd-file-popmenu.cc:
	* src/gnome-cmd-types.h:
	* src/Makefile.am:
	* src/utils.cc: